[gd_scene load_steps=29 format=2]

[ext_resource path="res://Imagens random/branco.jpg" type="Texture" id=1]
[ext_resource path="res://Scene/outras cenas/SelecaoPersonagem.gd" type="Script" id=2]
[ext_resource path="res://Imagens random/l0_sprite_sky2.png" type="Texture" id=3]
[ext_resource path="res://Imagens random/l0_sprite_sky8.png" type="Texture" id=4]
[ext_resource path="res://Imagens random/l0_sprite_sky5.png" type="Texture" id=5]
[ext_resource path="res://Imagens random/l0_sprite_sky1.png" type="Texture" id=6]
[ext_resource path="res://Imagens random/l0_sprite_sky3.png" type="Texture" id=7]
[ext_resource path="res://Imagens random/l0_sprite_sky6.png" type="Texture" id=8]
[ext_resource path="res://Imagens random/l0_sprite_sky4.png" type="Texture" id=9]
[ext_resource path="res://Imagens random/l0_sprite_sky7.png" type="Texture" id=10]
[ext_resource path="res://Imagens random/l0_sprite_sky9.png" type="Texture" id=11]
[ext_resource path="res://Scene/outras cenas/PressStart2P.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Imagens random/image-removebg-preview (18).png" type="Texture" id=13]
[ext_resource path="res://Imagens random/image-removebg-preview (17).png" type="Texture" id=14]
[ext_resource path="res://Imagens random/image-removebg-preview (12).png" type="Texture" id=15]
[ext_resource path="res://Imagens random/image-removebg-preview (19).png" type="Texture" id=16]
[ext_resource path="res://Imagens random/image-removebg-preview (10).png" type="Texture" id=17]
[ext_resource path="res://Imagens random/image-removebg-preview (11).png" type="Texture" id=18]


[sub_resource type="Theme" id=1]

[sub_resource type="Theme" id=6]

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=11]
size = 51
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[node name="SelecaoPersonagem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.262745 )
margin_left = -32.0
margin_top = -32.0
margin_right = 1079.0
margin_bottom = 639.0
theme = SubResource( 1 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gloria" type="Button" parent="."]
margin_left = 19.0
margin_top = 221.0
margin_right = 480.0
margin_bottom = 783.0
rect_scale = Vector2( 0.3, 0.3 )
theme = SubResource( 6 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Gloria"]
margin_left = 80.0
margin_top = 606.667
margin_right = 380.0
margin_bottom = 683.667
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "GLÓRIA"

[node name="Button2" type="Button" parent="."]
margin_left = 176.0
margin_top = 221.0
margin_right = 322.0
margin_bottom = 412.0
rect_scale = Vector2( 0.9, 0.9 )
icon = ExtResource( 15 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button2"]
margin_left = 24.4444
margin_top = 203.333
margin_right = 124.444
margin_bottom = 231.333
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "LUCAS"

[node name="Button3" type="Button" parent="."]
margin_left = 334.0
margin_top = 223.0
margin_right = 781.0
margin_bottom = 802.0
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button3"]
margin_left = 56.6667
margin_top = 610.0
margin_right = 406.667
margin_bottom = 713.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "ANTÔNIO
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 496.0
margin_top = 221.0
margin_right = 976.0
margin_bottom = 761.0
rect_scale = Vector2( 0.33, 0.33 )
icon = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button4"]
margin_left = 69.697
margin_top = 560.606
margin_right = 419.697
margin_bottom = 633.606
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "ISABELA"

[node name="Button5" type="Button" parent="."]
margin_left = 682.0
margin_top = 221.0
margin_right = 1094.0
margin_bottom = 851.0
rect_scale = Vector2( 0.3, 0.29 )
icon = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button5"]
margin_left = 103.333
margin_top = 648.276
margin_right = 316.333
margin_bottom = 724.276
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "JOÃO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 829.0
margin_top = 218.0
margin_right = 1312.0
margin_bottom = 754.0
rect_scale = Vector2( 0.36, 0.35 )
icon = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button6"]
margin_left = 136.111
margin_top = 548.571
margin_right = 308.111
margin_bottom = 608.571
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "ANA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -27, -17 )
scale = Vector2( 1.25, 1.25 )
z_index = -1
frames = SubResource( 2 )
frame = 5
playing = true
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 257.0
margin_top = 31.0
margin_right = 297.0
margin_bottom = 71.0

[node name="Label2" type="Label" parent="CenterContainer"]
margin_top = 8.0
margin_right = 504.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "SELECIONAR PERSONAGEM"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Gloria" to="." method="_on_Gloria_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
